# yggdrasil-authenticator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/client/: client.rs
src/model/: auth_agent.rs  auth_error.rs  auth_profile.rs  auth_user.rs
src/model/request/: auth_request.rs  invalidate_request.rs  mod.rs  refresh_request.rs  signout_request.rs  validate_request.rs
src/model/response/: auth_response.rs  mod.rs  refresh_response.rs
tests/: lib_test.rs
