[package]
name = "yggdrasil-authenticator"
authors = ["Rabbit0w0"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.7"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }