[package]
name = "yggdrasil-authenticator"
version = "0.1.0"
authors = ["Rabbit0w0 <rabbit0w0@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/MizukiLab/yggdrasil-authenticator"
repository = "https://github.com/MizukiLab/yggdrasil-authenticator"
documentation = "https://docs.rs/yggdrasil-authenticator"
description = "Rust library for authenticating using Yggdrasil API."
edition = "2021"

[dependencies]
reqwest = "0.12.7"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
mockito = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }